@@ -1,163 +1,83 @@
 #!/bin/sh
 #
-#  Copyright (C) 2010 Andreas Reichel <andreas@manticore-projects.com>
+# Startup script for the Webswing
 #
-# ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-#
-#  This program is free software; you can redistribute it and/or modify
-#  it under the terms of the GNU General Public License as published by
-#  the Free Software Foundation; either version 2 of the License, or (at
-#  your option) any later version.
-#
-#  This program is distributed in the hope that it will be useful, but
-#  WITHOUT ANY WARRANTY; without even the implied warranty of
-#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
-#  General Public License for more details.
-#
-#  You should have received a copy of the GNU General Public License along
-#  with this program; if not, write to the Free Software Foundation, Inc.,
-#  59 Temple Place, Suite 330, Boston, MA 02111-1307 USA.
-#
-# ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+# pidfile: /home/webswing/webswing.pid
 
+# Set environment.
+export HOME=`dirname $0`
+export OPTS="-h 0.0.0.0 -j $HOME/jetty.properties -u $HOME/user.properties -c $HOME/webswing.config -p $PORT"
+export JAVA_HOME=$JAVA_HOME
+export JAVA_OPTS="-Xmx2g -Djava.awt.headless=true"
 
-JAVA_HOME=$JAVA_HOME
-APP="WebSwing"
-BASE=.
-LOGGING="-Djava.util.logging.config.file=$HOME/.manticore/logging.properties"
+export LOG=$HOME/webswing.out
+export PID_PATH_NAME=$HOME/webswing.pid
 
-PATH=$JAVA_HOME/bin:$PATH
-JAVA_OPTS="-Xmx12G -Xms8G -Xss264k -Djava.awt.headless=true -Djava.security.egd=file:///dev/urandom -d64 -server -XX:+AggressiveOpts -XX:+UseStringCache -XX:AllocatePrefetchLines=1 -XX:AllocatePrefetchStyle=1 -XX:+OptimizeStringConcat -XX:UseSSE=2 -XX:+UseConcMarkSweepGC -XX:+UseParNewGC"
+if [ ! -f $HOME/webswing-server.war ]; then
+    echo "Webswing executable not found in $HOME folder"
+    exit 0
+fi
 
-NICE=10
-PID=$BASE/logs/$APP.pid
-LOG=$BASE/logs/$APP.log
-ERROR=$BASE/logs/$APP-error.log
+if [ ! -f $JAVA_HOME/bin/java ]; then
+    echo "Java installation not found in $JAVA_HOME folder"
+    exit 0
+fi
 
-usage="
-$(basename "$0") -- WebSwing Server Shell-Script
-
-Synopsis:
-    $(basename "$0") [-h]
-or  $(basename "$0") { start | stop | restart | status }
-
-with Parameters:
-    -h|--help           show this help text"
-
-export UNIX95=
-
-for arg
-do
-    delim=""
-    case "$arg" in
-       --help) args="${args}-h ";;
-       start|restart|status|stop) ACTION="$arg";;
-       # pass through anything else
-       *) [[ "${arg}" = "-*" ]] || delim="\""
-           args="${args}${delim}${arg}${delim} ";;
-    esac
-done
-# reset the translated args
-eval set -- $args
-# now we can process with getopt
-while getopts ":hp:1:2:3:" opt; do
-    case $opt in
-        h|\?)  echo "$usage"
-            exit 2
-            ;;
-        :)
-            echo "Parameter -$OPTARG requires an argument"
-            echo "$usage"
-            exit 2
-            ;;
-    esac
-done
-
-
-CMD='java'
-COMMAND="$CMD $JAVA_OPTS $LOGGING -jar webswing-server.war -j jetty.properties --port $PORT"
-
-function status {
-    echo
-    echo "==== Status of $APP"
-
-    if [ -f $PID ]
-    then
-        echo
-        echo "Pid from file $PID: [$( cat $PID )]"
-        echo
-
-        if UNIX95= ps -p $( cat $PID ) > /dev/null
-		then
-   			echo "$APP is running with PID [$PID]"
-   			UNIX95= ps -ef | grep -v grep | grep $( cat $PID )
-   		else
-   			echo "$APP is NOT running, but stale PID [$PID] found"
-		fi
-    else
-        echo
-        echo "$APP is NOT running"
-    fi
-}
-
-function start {
-    if [ -f $PID ] && ps -p $( cat $PID ) > /dev/null
-    then
-		echo
-        echo "$APP already started with PID [$( cat $PID )]"
-    else
-        echo "==== Starting $APP"
-        touch $PID
-        cp $LOG "${LOG}_$(date '+%Y%m%d%H%M%S')"; >$LOG
-        if nohup nice -n$NICE sh -c " $COMMAND; sleep 5; echo \"$(date '+%Y-%m-%d %X'): $APP STOPPED\" >>$LOG; rm -f $PID " >>$LOG 2>&1 &
-        then
-        	 sleep 5
-        	 #echo "Found nohup PID $!"
-        	 #UNIX95=  ps -o ppid -p $! | tail +2 > $PID
-        	 echo $! > $PID
-        	 echo "Started with PID [$( cat $PID )]"
-             echo "$(date '+%Y-%m-%d %X'): $APP STARTED" >>$LOG
-             tail -f $LOG
-        else echo "Error... "
-             /bin/rm $PID
+# See how we were called.
+case "$1" in
+    start)
+        # Start daemon.
+        echo -n "Starting Webswing: "
+        if [ ! -f $PID_PATH_NAME ]; then
+            if [ -z $DISPLAY ]; then
+              if [ `ps au | grep "X \:99" | wc -l` -eq 0 ]; then
+                xinit -- :99 &
+              fi
+              export XAUTHORITY=~/.Xauthority
+              export DISPLAY=':99'
+            fi
+            nohup $JAVA_HOME/bin/java $JAVA_OPTS -jar webswing-server.war $OPTS 2>> $LOG >> $LOG & echo $! > $PID_PATH_NAME
+        echo "STARTED"
+        else
+            PID=$(cat $PID_PATH_NAME);
+            if [ `ps -axo pid | grep "$PID" | wc -l` -eq 0 ]; then
+                rm $PID_PATH_NAME
+                echo "Webswing is NOT running, but stale PID [$PID] found. Clearing..."
+            else
+                echo "Webswing is already running with pid $PID..."
+            fi
         fi
-    fi
-}
-
-function stop1 {
-    echo "==== Stopping $APP"
-
-    if [ -f $PID ]
-    then
-        if pkill -P $(cat $PID)
-        then
-        	echo "Killed PID: [$( cat $PID )]"
-            echo "$(date '+%Y-%m-%d %X'): $APP STOPPED" >>$LOG
-            /bin/rm $PID
+        ;;
+    stop)
+        if [ -f $PID_PATH_NAME ]; then
+            PID=$(cat $PID_PATH_NAME);
+            echo "Webswing stoping ..."
+            kill $PID;
+            echo "Webswing stopped ..."
+            rm $PID_PATH_NAME
+        else
+            echo "Webswing is not running ..."
         fi
-    else
-        echo "No pid file found, $APP already stopped?"
-    fi
-}
-
-case "$ACTION" in
-    'status')
-            status
-            ;;
-    'start')
-            start
-            ;;
-    'stop')
-            stop1
-            ;;
-    'restart')
-            stop; echo "Sleeping..."; sleep 1; start
-            ;;
+    ;;
+    status)
+        if [ -f $PID_PATH_NAME ]; then
+            PID=$(cat $PID_PATH_NAME);
+            if [ `ps axo pid | grep "$PID" | wc -l` -eq 0 ]; then
+                rm $PID_PATH_NAME
+            else
+                echo "Webswing is running with pid $PID."
+            fi
+        else
+            echo "Webswing is not running ..."
+        fi
+    ;;
+    restart)
+        $0 stop
+        $0 start
+    ;;
     *)
-            echo "Action $ACTION not defined."
-            echo "$usage"
-            exit 1
-            ;;
+        echo "Usage: $0 {start|stop|restart|status}"
+        exit 1
 esac
 
 exit 0
